test/expected/explain_ii.out
explain inline int x
               ^
16: error: inline variables are not supported in C
